syntax = "proto3"; // 定义语法类型，通常proto3好于proto2，proto2好于proto1


option java_package = "com.upuphub.dew.community.connection.protobuf.machine";      // 定义报名
option java_multiple_files = true;

message MachineRegisterRequest{
    string machineMacAddress = 1;
    string machineName = 2;
    int32 machineType = 3;
    string machineVersion =4;
    string machineMaker = 5;
    string bindKey = 6;
}

message MachineSimpleInfoResult{
    string machineMacAddress = 1;
    string machineName = 2;
    int64 bindUin = 3;
}

message MachineMacAddressRequest{
    string macAddress = 1;
}

message MachineUinRequest{
    int64 uin = 1;
}

message MachineHealthRequest{
    int32 cpuCoreCount = 1;
    double cpuTemperature =2;
    double cpuUsageRate = 3;
    double hardDiskSize =4;
    double memorySize = 5;
    string systemName = 6;
    double usedHardDiskSize = 7;
    double usedMemorySize = 8;
}