package com.upuphub.dew.community.machine.api.utils;

import com.upuphub.dew.community.connection.common.MessageUtil;
import com.upuphub.dew.community.connection.protobuf.account.BaseProfile;
import com.upuphub.dew.community.connection.protobuf.account.Location;
import com.upuphub.dew.community.connection.protobuf.account.Profile;
import com.upuphub.dew.community.connection.protobuf.account.UsernameAndPassword;
import com.upuphub.dew.community.connection.protobuf.machine.MachineRegisterRequest;
import com.upuphub.dew.community.connection.protobuf.moments.*;
import com.upuphub.dew.community.connection.protobuf.news.NEWS_TYPE;
import com.upuphub.dew.community.connection.protobuf.news.NewsDetailModifyRequest;
import com.upuphub.dew.community.connection.protobuf.news.NewsDetailRequest;
import com.upuphub.dew.community.connection.protobuf.relation.RELATION_SOURCE;
import com.upuphub.dew.community.connection.protobuf.relation.RELATION_TYPE;
import com.upuphub.dew.community.connection.protobuf.relation.RelationPersistRequest;

import javax.validation.constraints.NotNull;
import java.util.ArrayList;
import java.util.List;
import java.util.UUID;

/**
 * @author Leo Wang
 * @version 1.0
 * @date 2019/9/4 23:40
 */
public class EDSUtil {

}
